--- a/MyChatApp/app/build.gradle
+++ b/MyChatApp/app/build.gradle
@@ -21,8 +21,10 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:exifinterface:27.1.1'
+    implementation 'com.android.support:animated-vector-drawable:27.1.1'
     implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:27.1.1'
     testImplementation 'junit:junit:4.12'
@@ -31,6 +33,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.1' // Firebase
     implementation 'com.google.firebase:firebase-database:16.0.1' // Realtime Database
     implementation 'com.google.firebase:firebase-auth:16.0.1' // Authentication
+    implementation 'com.google.firebase:firebase-storage:16.0.1' // Firebase Storage
     implementation 'de.hdodenhof:circleimageview:2.2.0' // CircleImageView
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.4.+' // Android Image Cropper
+    implementation 'com.squareup.picasso:picasso:2.71828' // Picasso
+    implementation 'com.firebaseui:firebase-ui-database:3.3.1' // FirebaseUI for Firebase Realtime Database
+    implementation 'id.zelory:compressor:2.0.0' // Compressor - Creating Thumbnails
 }
 apply plugin: 'com.google.gms.google-services'
