--- a/ChatApp/app/build.gradle
+++ b/ChatApp/app/build.gradle
@@ -49,7 +49,8 @@ dependencies {
     implementation 'com.jaeger.statusbarutil:library:1.4.0'
     implementation 'com.github.hani-momanii:SuperNova-Emoji:1.1'
     implementation 'com.getbase:floatingactionbutton:1.10.1'
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0' // A type-safe HTTP client for Android and Java
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.jaredrummler:android-device-names:1.1.8'
 }
 apply plugin: 'com.google.gms.google-services'
